
syntax = "proto3";

option java_multiple_files = true;
option java_package = "{{ org_name }}.{{ solution_name }}.{{ prefix_name }}.{{ suffix_name }}.grpc";
option java_outer_classname = "{{ PrefixName }}{{ SuffixName }}Stubs";

option csharp_namespace = "{{ PrefixName }}{{ SuffixName }}.API";

package {{ org_name }}.{{ solution_name }}.{{ prefix_name }}.{{ suffix_name }}.grpc;

import "google/protobuf/wrappers.proto";

service {{ PrefixName }}{{ SuffixName }} {
    rpc Create{{ PrefixName }} ({{ PrefixName }}Dto) returns (Create{{ PrefixName }}Response);
    rpc Get{{ PrefixName }}s (Get{{ PrefixName }}sRequest) returns (Get{{ PrefixName }}sResponse);
    rpc Get{{ PrefixName }} (Get{{ PrefixName }}Request) returns (Get{{ PrefixName }}Response);
    rpc Update{{ PrefixName }} ({{ PrefixName }}Dto) returns (Update{{ PrefixName }}Response);
    rpc Delete{{ PrefixName }} (Delete{{ PrefixName }}Request) returns (Delete{{ PrefixName }}Response);
}


message {{ PrefixName }}Dto {
    google.protobuf.StringValue id = 1;
    string name = 2;
}

message Get{{ PrefixName }}Request {
    string id = 1;
}

message Get{{ PrefixName }}Response {
        {{ PrefixName }}Dto {{ prefix_name }} = 1;
}

message Get{{ PrefixName }}sRequest {
    int32 start_page = 1;
    int32 page_size = 2;
}

message Get{{ PrefixName }}sResponse {
    repeated {{ PrefixName }}Dto {{ prefix_name }}s = 1;
    bool has_next = 2;
    bool has_previous = 3;
    int32 next_page = 4;
    int32 previous_page = 5;
    int32 total_pages = 6;
    int64 total_elements = 7;
}

message Update{{ PrefixName }}Response {
    {{ PrefixName }}Dto {{ prefix_name }} = 1;
}

message Create{{ PrefixName }}Response {
    {{ PrefixName }}Dto {{ prefix_name }} = 1;
}

message Delete{{ PrefixName }}Request {
    string id = 1;
}

message Delete{{ PrefixName }}Response {
    bool deleted = 1;
}
